# fast-api-template

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  grafana_metrics.json  prometheus.yml  pyproject.toml  run.py
fast_api_template/: __init__.py  main.py
fast_api_template/modules/user/: routes.py
