[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = ""
authors = ["Lucas Gouvea <lucasgouvea93@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.poetry.scripts]
start = "fast_api_template.__init__:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
